# SoPrj-B10

./: .gitignore  .gitmodules  CMakeLists.txt  POS.sln  README.md
POS/: .editorconfig  CMakeLists.txt  POS.c  POS.vcxproj  POS.vcxproj.filters  add_product_prompts.c  add_product_prompts.h  common_prompts.c  common_prompts.h  login.c  login.h  main.c  main_prompts.c  main_prompts.h  payment_prompts.c  payment_prompts.h  pos_main.c  pos_main.h  product.c  product.h  sell_prompts.c  sell_prompts.h  settlement.c  settlement.h  settlement_prompts.c  settlement_prompts.h  table_amount_prompt.c  table_amount_prompt.h  types.h  utils.c  utils.h
test/: CMakeLists.txt  tests.c
